<resources>
    <string name="app_name">Agromalll Image downloader</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_downloaded_images">Downloaded Images</string>
    <string name="title_all_images">All Images</string>

    <string name="desc_limit">How many images per page?</string>
    <string name="desc_page">What page?</string>
    <string name="action_go">GO</string>
    <string name="default_limit">12</string>
    <string name="default_page">1</string>
</resources>
