<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.images.all.AllImagesFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/params"
        app:cardCornerRadius="0dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_go"
                app:backgroundTint="@color/colorAccent"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/action_go"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/edit_limit"
                app:layout_constraintBottom_toBottomOf="@id/edit_page"
                android:layout_width="96dp"
                android:layout_height="0dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_limit"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:text="@string/default_limit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_go"
                android:hint="@string/desc_limit"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_page"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:text="@string/default_page"
                app:layout_constraintTop_toBottomOf="@id/edit_limit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_go"
                android:hint="@string/desc_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        app:layout_constraintTop_toBottomOf="@id/params"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_all_images"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/params"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp" />

</android.support.constraint.ConstraintLayout>